src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_Merge_Action__c</fullName>
        <label>Merge Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence_From__c</fullName>
        <label>Merge Confidence From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence_To__c</fullName>
        <label>Merge Confidence To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence__c</fullName>
        <label>Confidence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Program__c</fullName>
        <label>Merge Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Intake_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Merge_Targets__c</fullName>
        <label>Merge Targets</label>
        <summaryForeignKey>C501_Account_Merge__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>